--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello,Welcome to new world</h1>
+    <h1>Hello Sony,Welcome to new world</h1>
 </body>
 </html>
